<resources>
    <string name="app_name">My Application</string>
    <string name="button_main">Calculate</string>
    <string name="title_activity_my_other">MyOtherActivity</string>
    <string name="my_other_activity">MyOtherActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pt_buddy_icon_name">PTBuddy</string>
    <string name="username">Username</string>
    <string name="strong_man">Strong Man</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="pt_buddy">PTBuddy</string>
    <string name="weight">Weight</string>
    <string name="name">Name</string>
    <string name="please_enter_the_following_prompts">Please enter the following prompts:</string>
    <string name="submit">Submit</string>
    <string name="how_was_your_workout">How was your workout?</string>

    <!-- Shared Prefs -->
    <string name="checkbox_login">com.example.shane.myapplication.checkbox</string>
    <string name="email_login">com.example.shane.myapplication.email</string>
    <string name="password_login">com.example.shane.myapplication.password</string>
    <bool name="retUserTrue">true</bool>
    <bool name="retUserFalse">false</bool>

</resources>
